--- a/app/index.html
+++ b/app/index.html
@@ -66,66 +66,113 @@
                             <li><a href="">как принимать?</a></li>
                             <li><a href="">как заказать</a></li>
                         </ul>
-
-                        <div id="carousel-example-generic" class="carousel slide my-carousel" data-ride="carousel">
-                                <!-- Wrapper for slides -->
-                                <div class="carousel-inner my-carousel-inner" role="listbox">
-                                    <div class="item active">
-                                        <div class="col-md-8 col-md-offset-2">
-                                            <h3>НОВЕЙШИЕ ИНДИЙСКИЕ ПРЕПАРАТЫ(1!)</h3>
-                                            <p>ПОКАЗАТЕЛИ ПОЛНОГО ВЫЗДОРОВЛЕНИЯ 95%</p>
-                                            <button type="button" class="my-btn my-btn-success my-btn-lx">read more</button>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <div class="col-md-8 col-md-offset-2">
-                                            <h3>НОВЕЙШИЕ ИНДИЙСКИЕ ПРЕПАРАТЫ(2!)</h3>
-                                            <p>ПОКАЗАТЕЛИ ПОЛНОГО ВЫЗДОРОВЛЕНИЯ 95%</p>
-                                            <button type="button" class="my-btn my-btn-success my-btn-lx">read more</button>
-                                        </div>
-                                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div id="carousel-example-generic" class="carousel slide my-carousel" data-ride="carousel">
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner my-carousel-inner" role="listbox">
+                            <div class="item active">
+                                <div class="col-md-8 col-md-offset-2">
+                                    <h3>НОВЕЙШИЕ ИНДИЙСКИЕ <b>ПРЕПАРАТЫ(1!)</b></h3>
+                                    <p>ПОКАЗАТЕЛИ <b>ПОЛНОГО</b> ВЫЗДОРОВЛЕНИЯ 95%</p>
+                                    <button type="button" class="my-btn-success">смотреть</button>
                                 </div>
-                                <!-- Controls -->
-                                <div class="my-control-icon">
-                                    <a class="my-control-left" href="#carousel-example-generic" role="button" data-slide="prev">
-                                        <i class="fa fa-angle-left" aria-hidden="true"></i>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="my-control-right" href="#carousel-example-generic" role="button" data-slide="next">
-                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
-                                <ol class="carousel-indicators my-indicators">
-                                        <li data-target="#carousel-example-generic" data-slide-to="0"></li>
-                                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                                    </ol>
                             </div>
-
+                            <div class="item">
+                                <div class="col-md-8 col-md-offset-2">
+                                    <h3>НОВЕЙШИЕ ИНДИЙСКИЕ <b>ПРЕПАРАТЫ(2!)</b></h3>
+                                    <p>ПОКАЗАТЕЛИ <b>ПОЛНОГО</b> ВЫЗДОРОВЛЕНИЯ 95%</p>
+                                    <button type="button" class="my-btn-success">смотреть</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Controls -->
+                        <div class="my-control-icon">
+                            <a class="my-control-left" href="#carousel-example-generic" role="button" data-slide="prev">
+                                    <i class="fa fa-angle-left" aria-hidden="true"></i>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            <a class="my-control-right" href="#carousel-example-generic" role="button" data-slide="next">
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                        </div>
+                        <ol class="carousel-indicators my-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                        </ol>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
 
-    <!--Logo-top-->
-    <div class="container">
-        <div class="row">
-
-        </div>
-    </div>
-
-    <!--carousel-->
-    <div class="container-fluid">
-        <div class="row">
-
-        </div>
-    </div>
-
     <!--main menu-->
     <div class="container">
         <div class="row">
+            <div class="col-md-12 my-main-top my-title">
+                <h1>Актуальность и серьезность проблемы</h1>
+                <p>
+                    С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру. Эти коварные
+                    инфекционные заболевания не только очень опасны для здоровья, но и с каждым днем получают всё большую
+                    распространенность. Во многом это связано с отсутствием полной и достоверной информации о путях распространения
+                    вирусов, методах профилактики и как лечить гепатит с эффективно и навсегда.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 my-title">
+                <h1>препараты</h1>
+            </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
         </div>
     </div>
 
