--- a/app/index.html
+++ b/app/index.html
@@ -173,6 +173,122 @@
                 <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
                 <button type="button" class="my-btn-order">заказать</button>
             </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
+            <div class="col-md-4 my-blk-product">
+                <img src="img/Layer-12.jpg" alt="Daklatasvir Natdac">
+                <ul class="my-social-2">
+                    <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+                <p>
+                    Даклатасвир — Daklatasvir Natdac Natco 60 mg 28 tab
+                </p>
+                <span>7 500</span>
+                <i class="fa fa-rub fa-3x" aria-hidden="true"></i>
+                <button type="button" class="my-btn-order">заказать</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 my-main-top my-title">
+                <h1>гарантия качества</h1>
+                <p>
+                    Серти т завода производителя. Все уровни защиты от подделок на упаковке! 100% снижения вирусной нагрузки после недели приёма
+                    или вернём деньги.
+                </p>
+            </div>
+            <div class="col-md-12 my-blk-certi my-title">
+                <h1>СЕРТИФИКАТЫ И ЛИЦЕНЗИИ</h1>
+
+            </div>
+            <div class="col-md-12">
+                <div id="carousel-example-generic2" class="carousel slide my-carousel" data-ride="carousel">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner my-carousel-inner" role="listbox">
+                        <div class="item active">
+                            <div class="row">
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="row">
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                                <div class="col-md-3 my-blk-carsel">
+                                    <img src="img/Layer-18.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Controls -->
+                    <div class="my-control-icon">
+                        <a class="my-control-left" href="#carousel-example-generic2" role="button" data-slide="prev">
+                                <i class="fa fa-angle-left" aria-hidden="true"></i>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        <a class="my-control-right" href="#carousel-example-generic2" role="button" data-slide="next">
+                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                <span class="sr-only">Next</span>
+                            </a>
+                    </div>
+                    <script>
+                        $('#carousel-example-generic2').carousel({
+                            interval: false
+                        });
+                    </script>
+                </div>
+            </div>
         </div>
     </div>
 
