add new carousel2 and zoom on img

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <script src="libs/jquery-3.2.1.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.js"></script>
     <link href="libs/font-awesome/css/font-awesome.css" rel="stylesheet">
+
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <link href="css/fonts.css" rel="stylesheet" />
@@ -221,72 +222,40 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container">
+        <!-- my-blk-certi -->
         <div class="row">
             <div class="col-md-12 my-main-top my-title">
                 <h1>гарантия качества</h1>
                 <p>
-                    Серти т завода производителя. Все уровни защиты от подделок на упаковке! 100% снижения вирусной нагрузки после недели приёма
-                    или вернём деньги.
+                    Сертификат завода производителя. Все уровни защиты от подделок на упаковке! 100% снижения вирусной нагрузки после недели
+                    приёма или вернём деньги.
                 </p>
             </div>
-            <div class="col-md-12 my-blk-certi my-title">
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row my-blk-certi">
+            <div class="col-md-12 my-title">
                 <h1>СЕРТИФИКАТЫ И ЛИЦЕНЗИИ</h1>
-
             </div>
             <div class="col-md-12">
-                <div id="carousel-example-generic2" class="carousel slide my-carousel" data-ride="carousel">
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner my-carousel-inner" role="listbox">
-                        <div class="item active">
-                            <div class="row">
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                                <div class="col-md-3 my-blk-carsel">
-                                    <img src="img/Layer-18.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
+                <div id="carousel2">
+                    <a class="arrow prev"><i class="fa fa-angle-left fa-5x" aria-hidden="true"></i></a>
+                    <div class="gallery">
+                        <ul class="images">
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                        </ul>
                     </div>
-                    <!-- Controls -->
-                    <div class="my-control-icon">
-                        <a class="my-control-left" href="#carousel-example-generic2" role="button" data-slide="prev">
-                                <i class="fa fa-angle-left" aria-hidden="true"></i>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        <a class="my-control-right" href="#carousel-example-generic2" role="button" data-slide="next">
-                                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                <span class="sr-only">Next</span>
-                            </a>
-                    </div>
-                    <script>
-                        $('#carousel-example-generic2').carousel({
-                            interval: false
-                        });
-                    </script>
+                    <a class="arrow next"><i class="fa fa-angle-right fa-5x" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
