--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
     <!--main menu-->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 my-main-top my-title">
+            <div class="col-md-12 my-main-txt my-title my-br">
                 <h1>Актуальность и серьезность проблемы</h1>
                 <p>
                     С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру. Эти коварные
@@ -225,7 +225,7 @@
     <div class="container">
         <!-- my-blk-certi -->
         <div class="row">
-            <div class="col-md-12 my-main-top my-title">
+            <div class="col-md-12 my-main-txt my-title my-br">
                 <h1>гарантия качества</h1>
                 <p>
                     Сертификат завода производителя. Все уровни защиты от подделок на упаковке! 100% снижения вирусной нагрузки после недели
@@ -260,13 +260,81 @@
             </div>
         </div>
     </div>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 my-main-txt my-title">
+                <h1>анонсы статей</h1>
+                <p>Лечение от гепатита С проходит в несколько этапов, которые необходимо соблюдать для достижения максимального
+                    эффекта:
+                </p>
+            </div>
+        </div>
+        <div class="row my-blk-tips my-title my-main-txt">
+            <div class="col-md-2 col-md-offset-1">
+                <img src="img/Layer-22.jpg" alt="">
+                <h1>Консультация</h1>
+                <p>С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру.
+                    Эти коварные инфекционные заболевания не только очень опасны для здоровья, но и с каждым</p>
+            </div>
+            <div class="col-md-2">
+                <img src="img/Layer-26.jpg" alt="">
+                <h1>сдача анализов</h1>
+                <p>С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру.
+                    Эти коварные инфекционные заболевания не только очень опасны для здоровья, но и с каждым</p>
+            </div>
+            <div class="col-md-2">
+                <img src="img/Layer-24.jpg" alt="">
+                <h1>о препаратах</h1>
+                <p>С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру.
+                    Эти коварные инфекционные заболевания не только очень опасны для здоровья, но и с каждым</p>
+            </div>
+            <div class="col-md-2">
+                <img src="img/Layer-25.jpg" alt="">
+                <h1>Здоровье</h1>
+                <p>С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру.
+                    Эти коварные инфекционные заболевания не только очень опасны для здоровья, но и с каждым</p>
+            </div>
+            <div class="col-md-2">
+                <img src="img/Layer-26.jpg" alt="">
+                <h1>симптомы</h1>
+                <p>С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру.
+                    Эти коварные инфекционные заболевания не только очень опасны для здоровья, но и с каждым</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 my-main-txt my-title my-news">
+                <h1>все новости</h1>
+            </div>
+        </div>
+        <div class="row aboutus">
+            <div class="col-md-12 my-main-txt my-title">
+                <h1>о нас</h1>
+                <p>
+                    С актуальными и серьезными проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру. Эти коварные
+                    инфекционные заболевания не только очень опасны для здоровья, но и с каждым днем получают всё большую
+                    распространенность. Во многом это связано с отсутствием полной и достоверной информации о путях распространения
+                    вирусов, методах профилактики и как лечить гепатит с эффективно и навсегда. С актуальными и серьезными
+                    проблемами гепатитов сегодня сталкивается огромное количество людей по всему миру. Эти коварные инфекционные
+                    заболевания не только очень опасны для здоровья, но и с каждым днем получают всё большую распространенность.
+                    Во многом это связано с отсутствием полной и достоверной информации о путях распространения вирусов,
+                    методах профилактики и как лечить гепатит с эффективно и навсегда.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 my-main-txt my-title">
+                <h1>Доставка по РФ и странам СНГ</h1>
+                <p>
+                    Мы осуществляем доставку препаратов по всей территории России, а также странам СНГ. Если Вам необходима доставка в другую
+                    страну, свяжитесь с нашей службой поддержки и мы найдем решение этого вопроса!
+                </p>
+                <button class="my-btn-question">еще вопросы ?</button>
+            </div>
+        </div>
+    </div>
     <!--futer-->
     <footer id="my-fut">
         <div class="container-fluid">
-            <div class="row">
-
-            </div>
         </div>
     </footer>
 </body>
