--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
     <script src="libs/jquery-3.2.1.min.js"></script>
     <script src="libs/bootstrap/js/bootstrap.js"></script>
     <link href="libs/font-awesome/css/font-awesome.css" rel="stylesheet">
-
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <link href="css/fonts.css" rel="stylesheet" />
@@ -244,15 +243,15 @@
                     <a class="arrow prev"><i class="fa fa-angle-left fa-5x" aria-hidden="true"></i></a>
                     <div class="gallery">
                         <ul class="images">
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
-                            <li><img src="img/Layer-18.jpg" alt=""></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
+                            <li><img src="img/Layer-18.jpg"></li>
                         </ul>
                     </div>
                     <a class="arrow next"><i class="fa fa-angle-right fa-5x" aria-hidden="true"></i></a>
